--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -44,13 +44,13 @@ lib_deps =
 
 build_flags =
   ${base_config.build_flags}
-  -DSK_DISPLAY=1
-  -DSK_LEDS=1
-  -DNUM_LEDS=8
+  -DSK_DISPLAY=0
+  -DSK_LEDS=0
+  ;-DNUM_LEDS=8
   -DSENSOR_MT6701=1
-  -DSK_STRAIN=1
+  -DSK_STRAIN=0
   -DSK_INVERT_ROTATION=1
-  -DSK_ALS=1
+  -DSK_ALS=0
 
   -DPIN_UH=26
   -DPIN_UL=25
@@ -58,33 +58,39 @@ build_flags =
   -DPIN_VL=32
   -DPIN_WH=12
   -DPIN_WL=33
-  -DPIN_BUTTON_NEXT=-1
+  -DPIN_BUTTON_NEXT=22
   -DPIN_BUTTON_PREV=-1
-  -DPIN_SDA=15
-  -DPIN_SCL=8
-  -DPIN_MT_DATA=37
+  ;-DPIN_SDA=15
+  ;-DPIN_SCL=8
+  ;MT6701 Related
+  -DPIN_MT_DATA=4
   -DPIN_MT_CLOCK=13
   -DPIN_MT_CSN=14
+  ;-DPIN_RE_1=35
+  ;-DPIN_RE_2=34
+  -DPIN_SERIAL_TX=16
+  -DPIN_SERIAL_RX=17
+
   -DPIN_LED_DATA=7
   -DPIN_LCD_BACKLIGHT=19
 
-  -DDESCRIPTION_FONT=Roboto_Thin_24
-  -DDESCRIPTION_Y_OFFSET=20
-  -DVALUE_OFFSET=30
-  -DDRAW_ARC=0
+  ;-DDESCRIPTION_FONT=Roboto_Thin_24
+  ;-DDESCRIPTION_Y_OFFSET=20
+  ;-DVALUE_OFFSET=30
+  ;-DDRAW_ARC=0
 
   -DUSER_SETUP_LOADED=1
-  -DGC9A01_DRIVER=1
+  -DGC9A01_DRIVER=0
   -DCGRAM_OFFSET=1
-  -DTFT_WIDTH=240
-  -DTFT_HEIGHT=240
-  -DTFT_MISO=-1
-  -DTFT_MOSI=5
-  -DTFT_SCLK=20
-  -DTFT_CS=21
-  -DTFT_DC=22
-  -DTFT_RST=4
-  -DTFT_BL=-1
+  ;-DTFT_WIDTH=240
+  ;-DTFT_HEIGHT=240
+  ;-DTFT_MISO=-1
+  ;-DTFT_MOSI=5
+  ;-DTFT_SCLK=20
+  ;-DTFT_CS=21
+  ;-DTFT_DC=22
+  ;-DTFT_RST=4
+  ;-DTFT_BL=-1
   -DLOAD_GLCD=1
   -DLOAD_GFXFF=1
   -DSPI_FREQUENCY=40000000
@@ -104,6 +110,9 @@ build_flags =
   ; (SOC_GPIO_VALID_GPIO_MASK & ~(0ULL | _FL_BIT(34) | _FL_BIT(35) | _FL_BIT(36) | _FL_BIT(37) | _FL_BIT(38) | _FL_BIT(39)))
   -DSOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
+monitor_filters = send_on_enter
+monitor_echo = yes
+
   
 [env:handheld_tdisplay]
 extends = base_config
@@ -114,7 +123,7 @@ lib_deps =
 
 build_flags =
   ${base_config.build_flags}
-  -DSK_DISPLAY=1
+  -DSK_DISPLAY=0
   -DSK_STRAIN=0
   -DSK_LEDS=0
 
