--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -64,15 +64,22 @@ build_flags =
   ;-DPIN_SDA=15
   ;-DPIN_SCL=8
   ;MT6701 Related
-  -DPIN_MT_DATA=19
-  -DPIN_MT_CLOCK=18
-  -DPIN_MT_CSN=5
+  ;OLD PINOUT
+  ; -DPIN_MT_DATA=19
+  ; -DPIN_MT_CLOCK=18
+  ; -DPIN_MT_CSN=5
+  ;NEW PINOUT
+  -DPIN_MT_DATA=4
+  -DPIN_MT_CLOCK=13
+  -DPIN_MT_CSN=14
   ;-DPIN_RE_1=35
   ;-DPIN_RE_2=34
-  ;-DPIN_SERIAL_TX=16
-  ;-DPIN_SERIAL_RX=17
-  -DPIN_SERIAL_TX=22
-  -DPIN_SERIAL_RX=23
+  ;OLD PINOUT
+  ; -DPIN_SERIAL_TX=22
+  ; -DPIN_SERIAL_RX=23
+  ;NEW PINOUT
+  -DPIN_SERIAL_TX=17
+  -DPIN_SERIAL_RX=16
 
   -DPIN_LED_DATA=7
   -DPIN_LCD_BACKLIGHT=4
